--- a/reviewer/templates/reviewer/studying_finished.html
+++ b/reviewer/templates/reviewer/studying_finished.html
@@ -21,6 +21,8 @@ bvraaaaain
 <p>There was nothing to study!</p>
 {% endif %}
 
+<a href={% url 'reviewer:home' %} role="button" class="btn btn-outline-danger"> Zurück </a>
+
 {% endblock %}
 
 
