--- a/reviewer/templates/reviewer/base.html
+++ b/reviewer/templates/reviewer/base.html
@@ -47,12 +47,15 @@
 
         </nav>
 
-
-    <div class="text-center">
+ <div class="row">
+   <div class="col-1"> </div>
+    <div class="col-10 text-center" id="base-ground">
 
         {% block content %}{% endblock %}
-
+</div>
+ <div class="col-1"> </div>
     </div>
+
 
 
 <nav class="navbar fixed-bottom navbar-light bg-faded" id='bottom_navbar'>
