--- a/reviewer/templates/reviewer/case_creation_zr.html
+++ b/reviewer/templates/reviewer/case_creation_zr.html
@@ -15,6 +15,7 @@ Fall erstellen
 
 <p> Skizze - alle vorliegenden Vorraussetzungen und Probleme ankreuzen: </p>
 <div class="boxes">
+<!--- 1.Button --->
       <div class="row">
           <div class="col-1 text-left">
           </div>
@@ -27,14 +28,11 @@ Fall erstellen
     </div>
 
   <div class="collapse" id="collapseVertrA">
+    <!--- 1.1. Button --->
                   <div class="row">
                     <div class="col-2 text-left">
                     </div>
-
                     <div class="col-2 text-left">
-
-
-
                       <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#collapseKV" aria-expanded="false" aria-controls="collapseVertrA">
                           Kaufvertrag §433 BGB
                       </button>
@@ -67,22 +65,194 @@ Fall erstellen
                                                   </div>
 
                                                 <div class="col text-left">
-                                                  <p>(P){{ form.p }}</p>
-                                                  <p>(P){{ form.p2 }}</p>
-                                                  <p>(P){{ form.p3 }}</p>
+                                                  <p>(P){{ form.kp }}</p>
+                                                  <p>(P){{ form.kp2 }}</p>
+                                                  <p>(P){{ form.kp3 }}</p>
                                                 </div>
-
-
-
-
 
 
                                                 <div class="col-sm-5 text-left">
                                                 </div>
                                               </div>
-      </div>
+                                              </div>
+
+
+  <!--- 1.2. Button --->
+                      <div class="row">
+                                <div class="col-2 text-left">
+                                </div>
+                                <div class="col-2 text-left">
+
+                                <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#collapseWV" aria-expanded="false" aria-controls="collapseWA">
+                                                      Werkvertrag §634 BGB
+                                </button>
+                                </div>
+                      </div>
+    <div class="collapse" id="collapseWV">
+                    <div class="row">
+                        <div class="col-3 text-left">
+                        </div>
+
+                        <div class="col-2 text-left">
+                      <p> Gewährleistung: </p>
+                        </div>
+
+                      <div class="col-sm-7 text-left">
+                          </div>
+                      </div>
+
+
+
+                                  <div class="row">
+                                  <div class="col-3 text-left">
+                                  </div>
+
+
+                                  <div class="col text-left">
+                                    <p>Vertragsschluss {{ form.wv }}</p>
+                                    <p>Mangel {{ form.wvmangel }}</p>
+                                    <p>Abnahme {{ form.abnahme }}</p>
+                                    </div>
+
+                                  <div class="col text-left">
+                                    <p>(P){{ form.wp }}</p>
+                                    <p>(P){{ form.wp2 }}</p>
+                                    <p>(P){{ form.wp3 }}</p>
+                                  </div>
+
+
+
+
+
+
+                                  <div class="col-sm-5 text-left">
+                                  </div>
+                                </div>
+                                </div>
+
+  
+<!--- 1.3 Button --->
+                    <div class="row">
+                              <div class="col-2 text-left">
+                              </div>
+                              <div class="col-2 text-left">
+
+                              <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#collapseDV" aria-expanded="false" aria-controls="collapseDV">
+                                                    Dienstvertrag §611 BGB
+                              </button>
+                              </div>
+                    </div>
+  <div class="collapse" id="collapseDV">
+                  <div class="row">
+                      <div class="col-3 text-left">
+                      </div>
+
+                      <div class="col-2 text-left">
+                    <p> SchE: </p>
+                      </div>
+
+                    <div class="col-sm-7 text-left">
+                        </div>
+                    </div>
+
+
+
+                                <div class="row">
+                                <div class="col-3 text-left">
+                                </div>
+
+
+                                <div class="col text-left">
+                                  <p>Vertragsschluss {{ form.dv }}</p>
+                                  </div>
+
+                                <div class="col text-left">
+                                  <p>(P){{ form.dp }}</p>
+                                </div>
+
+
+
+
+
+
+                                <div class="col-sm-5 text-left">
+                                </div>
+                              </div>
+                              </div>
+
+  </div>
+<!--- 2. Button --->
+    <div class="row">
+        <div class="col-1 text-left">
+        </div>
+
+      <div class="col-2 text-left">
+        <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseQVA" aria-expanded="false" aria-controls="collapseQVA">
+    Quasivertragliche Ansprüche
+    </button>
+    </div>
     </div>
 
+    <div class="collapse" id="collapseQVA">
+
+<!--- 2.1. Button --->
+                <div class="row">
+                  <div class="col-2 text-left">
+                  </div>
+
+                  <div class="col-2 text-left">
+
+
+
+                    <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#collapsecic" aria-expanded="false" aria-controls="collapsecic">
+                        C.i.C. §311 II iVm. §241 II BGB
+                    </button>
+                  </div>
+                  </div>
+    <div class="collapse" id="collapsecic">
+                                <div class="row">
+                                    <div class="col-3 text-left">
+                                    </div>
+
+                                    <div class="col-2 text-left">
+                                  <p> Schadensersatz §280 I BGB: </p>
+                                    </div>
+
+                                  <div class="col-sm-7 text-left">
+                                      </div>
+                                  </div>
+
+
+
+                                              <div class="row">
+                                              <div class="col-3 text-left">
+                                              </div>
+
+
+                                              <div class="col text-left">
+                                                <p>Schuldverhältnis: Vertragsanbahnung §311 II BGB{{ form.cic }}</p>
+                                                <p>Pflichtverletzung {{ form.cicpv }}</p>
+                                                <p>Vertretenmüssen {{ form.cicvm }}</p>
+                                                </div>
+
+                                              <div class="col text-left">
+                                                <p>(P){{ form.cp }}</p>
+                                                <p>(P){{ form.cp2 }}</p>
+                                                <p>(P){{ form.cp3 }}</p>
+                                              </div>
+
+
+
+
+
+
+                                              <div class="col-sm-5 text-left">
+                                              </div>
+                                            </div>
+    </div>
+    </div>
+
+<!--- end of checkboxes --->
         <p>Lösung/ kurze Erklärung zu den Problemen:</p><p> {{ form.explanation }}</p>
           <button type="submit" class="save btn btn-default">Save</button>
 
