--- a/reviewer/templates/reviewer/case_finished_zr.html
+++ b/reviewer/templates/reviewer/case_finished_zr.html
@@ -21,6 +21,8 @@ Büffeln
 
 
   <div class="boxes">
+
+  <!--- 1.Button --->
         <div class="row">
             <div class="col-1 text-left">
             </div>
@@ -33,7 +35,9 @@ Büffeln
       </div>
 
 <!--- if case.xxx makes the visible and red --->
-    <div class="collapse {% if case.kv or case.p or case.mangel or case.p2 or case.gefahruebergang or case.p3 %} show {% endif %}" id="collapseVertrA">
+    <div class="collapse {% if case.kv or case.kp or case.wv or case.wp or case.dv or case.dp %} show {% endif %}" id="collapseVertrA">
+
+<!--- 1.1 Button --->
                     <div class="row">
                       <div class="col-2 text-left">
                       </div>
@@ -47,7 +51,7 @@ Büffeln
                         </button>
                       </div>
                       </div>
-      <div class="collapse {% if case.kv or case.p or case.mangel or case.p2 or case.gefahruebergang or case.p3 %} show {% endif %}" id="collapseKV">
+      <div class="collapse {% if case.kv or case.kp %} show {% endif %}" id="collapseKV">
                                     <div class="row">
                                         <div class="col-3 text-left">
                                         </div>
@@ -74,9 +78,9 @@ Büffeln
                                                     </div>
 
                                                   <div class="col text-left">
-                                                    <p {% if wrong1 %} class="wrong"{% endif %}>(P){{ form.p }}</p>
-                                                    <p {% if wrong3 %} class="wrong"{% endif %}>(P){{ form.p2 }}</p>
-                                                    <p {% if wrong5 %} class="wrong"{% endif %}>(P){{ form.p3 }}</p>
+                                                    <p {% if wrong1 %} class="wrong"{% endif %}>(P){{ form.kp }}</p>
+                                                    <p {% if wrong3 %} class="wrong"{% endif %}>(P){{ form.kp2 }}</p>
+                                                    <p {% if wrong5 %} class="wrong"{% endif %}>(P){{ form.kp3 }}</p>
                                                   </div>
 
 
@@ -88,7 +92,185 @@ Büffeln
                                                   </div>
                                                 </div>
         </div>
-      </div>
+
+
+        <!--- 1.2. Button --->
+                            <div class="row">
+                                      <div class="col-2 text-left">
+                                      </div>
+                                      <div class="col-2 text-left">
+
+                                      <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#collapseWV" aria-expanded="false" aria-controls="collapseWA">
+                                                            Werkvertrag §634 BGB
+                                      </button>
+                                      </div>
+                            </div>
+          <div class="collapse {% if case.wv or case.wp %} show {% endif %}" id="collapseWV">
+                          <div class="row">
+                              <div class="col-3 text-left">
+                              </div>
+
+                              <div class="col-2 text-left">
+                            <p> Gewährleistung: </p>
+                              </div>
+
+                            <div class="col-sm-7 text-left">
+                                </div>
+                            </div>
+
+
+
+                                        <div class="row">
+                                        <div class="col-3 text-left">
+                                        </div>
+
+
+                                        <div class="col text-left">
+                                          <p{% if wrong6 %} class="wrong"{% endif %}>Vertragsschluss {{ form.wv }}</p>
+                                          <p{% if wrong8 %} class="wrong"{% endif %}>Mangel {{ form.wvmangel }}</p>
+                                          <p{% if wrong10 %} class="wrong"{% endif %}>Abnahme {{ form.abnahme }}</p>
+                                          </div>
+
+                                        <div class="col text-left">
+                                          <p{% if wrong7 %} class="wrong"{% endif %}>(P){{ form.wp }}</p>
+                                          <p{% if wrong9 %} class="wrong"{% endif %}>(P){{ form.wp2 }}</p>
+                                          <p{% if wrong11 %} class="wrong"{% endif %}>(P){{ form.wp3 }}</p>
+                                        </div>
+
+
+
+
+
+
+                                        <div class="col-sm-5 text-left">
+                                        </div>
+                                      </div>
+                                      </div>
+
+<!--- 1.3 Button --->
+                            <div class="row">
+                                      <div class="col-2 text-left">
+                                      </div>
+                                      <div class="col-2 text-left">
+
+                                      <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#collapseDV" aria-expanded="false" aria-controls="collapseDV">
+                                                            Dienstvertrag §611 BGB
+                                      </button>
+                                      </div>
+                            </div>
+          <div class="collapse{% if case.dv or case.dp %} show {% endif %}" id="collapseDV">
+                          <div class="row">
+                              <div class="col-3 text-left">
+                              </div>
+
+                              <div class="col-2 text-left">
+                            <p> SchE: </p>
+                              </div>
+
+                            <div class="col-sm-7 text-left">
+                                </div>
+                            </div>
+
+
+
+                                        <div class="row">
+                                        <div class="col-3 text-left">
+                                        </div>
+
+
+                                        <div class="col text-left">
+                                          <p{% if wrong12 %} class="wrong"{% endif %}>Vertragsschluss {{ form.dv }}</p>
+                                          </div>
+
+                                        <div class="col text-left">
+                                          <p{% if wrong13 %} class="wrong"{% endif %}>(P){{ form.dp }}</p>
+                                        </div>
+
+
+
+
+
+
+                                        <div class="col-sm-5 text-left">
+                                        </div>
+                                      </div>
+                                      </div>
+
+          </div>
+      <!--- 2. Button --->
+          <div class="row">
+              <div class="col-1 text-left">
+              </div>
+
+            <div class="col-2 text-left">
+              <button class="btn btn-primary" type="button" data-toggle="collapse" data-target="#collapseQVA" aria-expanded="false" aria-controls="collapseQVA">
+          Quasivertragliche Ansprüche
+          </button>
+          </div>
+          </div>
+
+          <div class="collapse {% if case.cic or case.cp %} show {% endif %}" id="collapseQVA">
+
+      <!--- 2.1. Button --->
+                      <div class="row">
+                        <div class="col-2 text-left">
+                        </div>
+
+                        <div class="col-2 text-left">
+
+
+
+                          <button class="btn btn-secondary" type="button" data-toggle="collapse" data-target="#collapsecic" aria-expanded="false" aria-controls="collapsecic">
+                              C.i.C. §311 II iVm. §241 II BGB
+                          </button>
+                        </div>
+                        </div>
+          <div class="collapse {% if case.cic or case.cp %} show {% endif %}" id="collapsecic">
+                                      <div class="row">
+                                          <div class="col-3 text-left">
+                                          </div>
+
+                                          <div class="col-2 text-left">
+                                        <p> Schadensersatz §280 I BGB: </p>
+                                          </div>
+
+                                        <div class="col-sm-7 text-left">
+                                            </div>
+                                        </div>
+
+
+
+                                                    <div class="row">
+                                                    <div class="col-3 text-left">
+                                                    </div>
+
+
+                                                    <div class="col text-left">
+                                                      <p{% if wrong14 %} class="wrong"{% endif %}>Schuldverhältnis: Vertragsanbahnung §311 II BGB{{ form.cic }}</p>
+                                                      <p{% if wrong16 %} class="wrong"{% endif %}>Pflichtverletzung {{ form.cicpv }}</p>
+                                                      <p{% if wrong18 %} class="wrong"{% endif %}>Vertretenmüssen {{ form.cicvm }}</p>
+                                                      </div>
+
+                                                    <div class="col text-left">
+                                                      <p{% if wrong15 %} class="wrong"{% endif %}>(P){{ form.cp }}</p>
+                                                      <p{% if wrong17 %} class="wrong"{% endif %}>(P){{ form.cp2 }}</p>
+                                                      <p{% if wrong19 %} class="wrong"{% endif %}>(P){{ form.cp3 }}</p>
+                                                    </div>
+
+
+
+
+
+
+                                                    <div class="col-sm-5 text-left">
+                                                    </div>
+                                                  </div>
+          </div>
+          </div>
+
+      <!--- end of checkboxes --->
+</div>
+
           <div id="erklarung">
           <p>Erklärung:</p><p> {{ case.explanation }}</p>
           </div>
