--- a/reviewer/templates/reviewer/case_reviewer_zr.html
+++ b/reviewer/templates/reviewer/case_reviewer_zr.html
@@ -64,7 +64,7 @@ Büffeln
                   <div class="col-sm-3 text-left">
                   </div>
                     <div class="col text-left">
-                    <p>{{ form.kv }} (P) Angebot</p>
+                    <p>{{ form.wv }} (P) Angebot</p>
                     </div>
                   </div>
                    <div class="row">
